tests/test_compile/cases/temp_field.stderr
error[E0063]: missing field `field_a` in initializer of `Test1`
 --> $DIR/temp_field.rs:4:10
  |
4 | #[derive(DekuRead, DekuWrite)]
  |          ^^^^^^^^ missing `field_a`
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
